# QWeld

./: .editorconfig  .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTENT_GUIDE.md  CONTRIBUTING.md  CBQWeldbuilddiagnosticsthread-dump-feature-exam-test.txt  FILE_OVERVIEW.md  LICENSE  MODULES.md  PROJECT_OVERVIEW.md  README.md  SPRINT_B_SUMMARY.md  SPRINT_T2_SUMMARY.md  SPRINT_T3_SUMMARY.md  SPRINT_T4_SUMMARY.md  SPRINT_T_SUMMARY.md  THIRD_PARTY_NOTICES.md  Test Results - LocaleSwitchUiTest.html  build.gradle.kts  detekt.yml  gradle.properties  local.properties  local.properties.sample  settings.gradle.kts  stage.md  welder_bank_en.json  welder_bank_ru.json
.githooks/: pre-commit
.github/: pull_request_template.md
.reuse/: dep5
LICENSES/: LicenseRef-Content-Data.txt  LicenseRef-Generated.txt
app-android/: build.gradle.kts  google-services.json  proguard-rules.pro
benchmarks-jvm/: build.gradle.kts
core-common/: build.gradle.kts
core-data/: build.gradle.kts
core-domain/: build.gradle.kts
core-model/: build.gradle.kts
docs/: CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTENT_POLICY.md  ERROR_HANDLER_USAGE.md  PRIVACY.md  RELEASE_CHECKLIST.md  blueprint-rules.md  ci-content.md  content-policy.md  content_sha_troubleshooting.md  crashlytics_symbol_upload.md  error_handling_manual_checklist.md  firestore_security_notes.md  glossary_ru.md  manual_error_network_tests.md  manual_release_smoke.md  (+6 more)
tools/content-tools/: README.md  pyproject.toml  qw_fix_familyid.py  qw_ru_lint.py
tools/content-tools/tests/: test_familyid.py  test_ru_lint.py
(+2008 files in other folders)
